--- a/styles.css
+++ b/styles.css
@@ -271,7 +271,7 @@ h2{
     margin-right: 5px;
 }
 
-.about {
+.about1 {
     margin-top: 5%;
     display: flex;
     justify-content: space-between;
